WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
24665
Hit testing assertion failure at Google Maps API example
https://bugs.webkit.org/show_bug.cgi?id=24665
Summary
Hit testing assertion failure at Google Maps API example
Cameron Zwarich (cpst)
Reported
2009-03-17 22:24:48 PDT
Hovering over the speech bubble at <
http://code.google.com/apis/maps/documentation/examples/map-infowindow.html
> causes an assertion failure in hit testing code. ASSERTION FAILED: !result.innerNode() (/Users/Cameron/WebKit/WebCore/rendering/RenderLayer.cpp:2407 bool WebCore::RenderLayer::hitTestContents(const WebCore::HitTestRequest&, WebCore::HitTestResult&, const WebCore::IntRect&, const WebCore::IntPoint&, WebCore::HitTestFilter) const)
Attachments
Patch, changelog
(2.13 KB, patch)
2009-03-22 12:07 PDT
,
Simon Fraser (smfr)
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2009-03-18 09:27:09 PDT
This means that someone returned true from nodeAtPoint but didn't set result.innerNode().
mitz
Comment 2
2009-03-21 20:12:18 PDT
***
Bug 24744
has been marked as a duplicate of this bug. ***
Simon Fraser (smfr)
Comment 3
2009-03-22 12:07:09 PDT
Created
attachment 28836
[details]
Patch, changelog
Simon Fraser (smfr)
Comment 4
2009-03-22 12:50:50 PDT
http://trac.webkit.org/changeset/41900
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug