2009-03-22  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Dan Bernstein

        https://bugs.webkit.org/show_bug.cgi?id=24665

        Image-map code in RenderImage could result in RenderImage::nodeAtPoint()
        setting HitTestResult::innerNode(), but returning false, which violates
        hit testing rules. Use a temporary HitTestResult so that we only fill in
        result when we know we've hit.

        * rendering/RenderImage.cpp:
        (WebCore::RenderImage::nodeAtPoint):

Canonical link: https://commits.webkit.org/33959@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41902 268f45cc-cd09-0410-ab3c-d52691b4dbfc